--- a/screen.css
+++ b/screen.css
@@ -152,7 +152,7 @@ table {
 th,
 td {
     padding: 2px 4px 2px 4px !important;
-    text-align: left;
+    text-align: center;
     vertical-align: top;
 }
 
