design and life and intervals fixed?

--- a/.vscode/public/style.css
+++ b/.vscode/public/style.css
@@ -1,6 +1,7 @@
 body {
-    background-color: #008080;
-    font-family: calibri;
+    background-color: #ed64a261;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-weight: normal;
     font-size: 100%;
     text-align: center;
     -webkit-animation: bgcolor 20s infinite;
@@ -11,7 +12,7 @@ body {
 
 .navbar {
     width: 100%;
-    background-color: #008B8B;
+    background-color: #ed64a261;
     overflow: auto;
     float: center;
     position: fixed;
@@ -29,11 +30,21 @@ body {
     font-size: 17px;
 }
 
+.dd {
+    background-color: #ed64a261;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+h1 {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 40px;
+
+}
 
 /* Navbar links on mouse-over */
 
 .navbar a:hover {
-    background-color: #7FFFD4;
+    background-color: rgb(247, 179, 216);
 }
 
 
@@ -63,17 +74,82 @@ button {
     margin: 10px;
     min-height: 40px;
     min-width: 400px;
-    background-color: #6495ED;
-    font-size: 20px;
+    font-size: 40px;
+    background-color: #ed64a261;
 }
 
+.btn {
+    border: none;
+    background-color: #ed64a261;
+    /* padding: 14px 28px; */
+    cursor: pointer;
+    display: inline-block;
+    font-size: 40px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-weight: normal;
+  }
+  
+.btn:hover {
+    background: #df498ccb;
+}
+  
+
+.registerTitle {
+    background: #f58bbacb;
+    font-size: 20px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    color: white;
+
+}
+
+
+.panel-body {
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 20px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+
+
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333333;
+    /* list-style-type: none; */
+    /* margin: 0; */
+    /* padding: 0; */
+    /* overflow: hidden; */
+    background-color: #bd1661cb;
     text-align: center;
+    font-size: 20px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+p {
+    text-align: center;
+    font-size: 20px;
+    font-family: "Comic Sans MS", cursive, sans-serif
+
+}
+
+pp {
+    text-align: center;
+    font-weight: normal;
+    font-size: 15px;
+    font-family: "Comic Sans MS", cursive, sans-serif
+
+}
+ppp {
+    text-align: center;
+    font-weight: normal;
+    font-size: 23px;
+    font-family: "Comic Sans MS", cursive, sans-serif
+
+}
+pppp {
+    text-align: center;
+    font-size: 30px;
+    font-family: "Comic Sans MS", cursive, sans-serif
+
 }
 
 li {
@@ -85,11 +161,11 @@ li a {
     color: white;
     text-align: center;
     padding: 10px;
-    text-decoration: none;
+    /* text-decoration: none; */
 }
 
 li a:hover {
-    background-color: #111111;
+    background-color: #df498ccb;
 }
 
 
@@ -136,7 +212,7 @@ li a:hover {
     color: #aaa;
     float: right;
     font-size: 28px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .close:hover,
@@ -158,7 +234,7 @@ li a:hover {
    margin-left: -190px;
    margin-top: -100px;
    background-color: #ffffff;
-   border: 2px solid #336699;
+   border: 2px solid #ed64a261;
    padding: 0px;
    z-index: 102;
    font-family: Verdana;
